--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-    <form method="post" action="">
+    <form method="post" action="/contact">
         <h1>Contact now</h1>
         <input type="text" name="name"/>
         <input type="email" name="email"/>
